--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,10 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
  
+  <script src="assets/js/web-animations.min.js"></script>   
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
+  
 
   <!-- un-comment this code to enable service worker
   <script>
